# perfkit

./: .dockerignore  .gitignore  CLAUDE_OPUS_IMPLEMENTATION_PLAN.md  Cargo.toml  Dockerfile  LICENSE  Makefile  Nuevo_plan.pkb  README.md  rust-toolchain.toml
.claude/agents/: ai-migration-lead.md  cli-dx-lead.md  delivery-coordinator.md  devops-sre-lead.md  docs-qa-enablement.md  frontend-ux-lead.md  jmx-migration-lead.md  kafka-protocol-lead.md  observability-lead.md  platform-architect.md  plugin-wasm-lead.md  qa-performance-semantics.md  reporting-analytics-lead.md  rust-engine-lead.md  security-governance-lead.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  migration_issue.yml  question.yml
.github/workflows/: ci.yml  release-desktop.yml  release.yml
crates/ai-assist/: Cargo.toml
crates/ai-assist/src/: lib.rs  redact.rs  suggest.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cluster/: Cargo.toml
crates/cluster/src/: lib.rs
crates/cluster/tests/: distributed.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/engine/tests/: semantics.rs
crates/history/: Cargo.toml
crates/history/src/: error.rs  lib.rs  model.rs  rbac.rs
crates/http-adapter/: Cargo.toml
crates/http-adapter/src/: lib.rs
crates/jmx-importer/: Cargo.toml
crates/jmx-importer/src/: export.rs  lib.rs
crates/jmx-importer/tests/: fixtures.rs
crates/kafka-adapter/: Cargo.toml
crates/kafka-adapter/src/: lib.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/plugin-host/: Cargo.toml
crates/plugin-host/src/: lib.rs
crates/reports/: Cargo.toml
crates/reports/src/: gate.rs  html.rs  junit.rs  lib.rs
crates/scenario-ir/: Cargo.toml
crates/scenario-ir/src/: lib.rs  migration.rs  model.rs  validate.rs
crates/security/: Cargo.toml
crates/security/src/: lib.rs
deploy/: docker-compose.distributed.yml
deploy/examples/: scenario.yaml
deploy/helm/perfkit/: Chart.yaml  values.yaml
deploy/helm/perfkit/templates/: _helpers.tpl  coordinator.yaml  crd.yaml  worker.yaml
deploy/kubernetes/: coordinator.yaml  loadtest-crd.yaml  loadtest-sample.yaml  namespace.yaml  rbac.yaml  worker.yaml
deploy/operator/: README.md
docs/: index.html
docs/adr/: ADR-001-arquitectura-general.md  ADR-002-ir-canonico-y-versionado.md  ADR-003-estrategia-migracion-jmx.md  ADR-004-modelo-ejecucion-local.md  ADR-005-reportes-vs-observability.md  ADR-006-seguridad-secretos-ia.md  ADR-007-ui-nativa-tauri.md  ADR-008-controllers-ir-v0.2.md  ADR-009-kafka-sampler-ir-v0.3.md  ADR-010-fases-6-a-10.md  README.md
docs/architecture/: overview.md
docs/benchmarks/: README.md  mockoon-local.md  perfkit-vs-jmeter.md
docs/deploy/: ci-cd.md  docker.md  kubernetes.md
docs/deploy/perfkit-servers/: apidog.meta.json
docs/migration/: jmeter-support-matrix.md  migrar-tu-primer-jmx.md
docs/status/: gap-analysis.md
examples/jmx/: bench-http.jmx  bench-mockoon.jmx  checkout-demo.jmx  constant-timer.jmx  csv-dataset.jmx  http-get-simple.jmx  http-post-headers.jmx  interleave-controller.jmx  json-extractor.jmx  jsr223-example.jmx  loop-controller.jmx  regex-extractor.jmx  throughput-controller.jmx  transaction-controller.jmx  unsupported-plugin.jmx  users.csv
examples/yaml/: thresholds.yaml
schemas/: migration-report.schema.json  scenario-ir.schema.json
tools/: bench-report.py  bench-target.js  benchmark-mockoon.sh  benchmark.sh  test-server.py
tools/mockoon/: perfkit-bench.json
ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  api.ts  index.css  mock.ts  types.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: lib.rs  main.rs
ui/src/components/: Bars.tsx  Chart.tsx  FidelityPanel.tsx  Heatmap.tsx  PlanTree.tsx  RequestDetail.tsx  StepEditor.tsx  ui.tsx
ui/src/lib/: format.ts  metrics.ts  mutate.ts  scaffold.ts
ui/src/views/: HelpView.tsx  HistoryView.tsx  ImportView.tsx  PlanView.tsx  ReportView.tsx  RunView.tsx
