[package]
name = "jmx-importer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "perfkit: importador JMX → IR con reporte de fidelidad (sin fallos silenciosos)"

[lib]
name = "jmx_importer"
path = "src/lib.rs"

[dependencies]
scenario-ir.workspace = true
roxmltree.workspace = true
thiserror.workspace = true
serde_json.workspace = true

[dev-dependencies]
scenario-ir.workspace = true
