[package]
name = "plugin-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "perfkit: host de plugins WASM con permisos declarativos y firma"

[lib]
name = "plugin_host"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wasmi.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true

[dev-dependencies]
wat.workspace = true
