[package]
name = "security"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "perfkit: seguridad (secretos, redacción) — stub MVP (ver ADR-006)"

[lib]
name = "security"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
thiserror.workspace = true
